<resources>
    <string name="app_name">HelpApp</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spa">Antras</string>
    <string name="Hot_Tub">Žemėlapis</string>
    <string name="pool">Trečias</string>
    <string name="beach">Ketvirtas</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tab_a_label">Pirmas</string>
    <string name="tab_b_label">Antras</string>
    <string name="tab_c_label">Trecias</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="icon">icon</string>
    <string name="text">Šiandien mums trūksta:</string>
    <string name="name">Pirmas TextView laukas</string>
    <string name="description">Aprasymas</string>
    <string name="title_detailed">Šiuo metu trūksta:</string>
    <string name="curent_individual">Dabartine situacija</string>
    <string name="name_feedback">Vartotojo vardas</string>
    <string name="massage_feedback" />
    <string name="user_btn_lft">Istaiga</string>
    <string name="user_btn_rgt">Givejas</string>
    <string name="img_name">Labiausiai trūksta:</string>
    <string name="r_img_name_individual">Antbačių</string>
    <string name="title_person_individual">Įstaigos atstovas:</string>
    <string name="ac_person_individual">Jonas Jonaitis</string>
    <string name="count_individual">15</string>
    <string name="urgent_title">"Skubiai reikia: "</string>
</resources>
