<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/recipient_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:baselineAligned="false"
            android:gravity="end"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/u_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Įstaigos pavadinimas:"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:text="@string/name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/u_title_ac_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/title_person_individual"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/u_ac_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:hint="Atsakingas asmuo:"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:text="@string/ac_person_individual"
                    android:textSize="14sp" />

                    <EditText
                        android:id="@+id/u_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:text="@string/description"
                        android:textSize="14sp" />

                <EditText
                    android:id="@+id/u_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:hint="Pakeisti slaptažodį"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="14sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/u_street"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:text="@string/description"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/u_str_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:focusable="false"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:text="@string/description"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/u_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:imeOptions="actionDone"
                        android:singleLine="true"
                        android:text="@string/description"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:paddingStart="5dp"
                        android:text="tel.: "
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/u_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:hint="telefono numeris:"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:text="@string/description"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/user_remove"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/delete" />

                <Button
                    android:id="@+id/user_logout"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/logout" />

                <Button
                    android:id="@+id/user_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/save" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/u_priority_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/u_image_priority"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/urgent_title"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/u_priority_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:focusable="false"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/title_detailed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />

    </LinearLayout>
</layout>